--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
-beautifulsoup4
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+charset-normalizer==2.0.2
+click==8.0.1
+idna==3.2
+importlib-metadata==4.6.1
+lxml==4.6.3
+mibian==0.1.3
+nsepy==0.8
+numpy==1.19.5
+pandas==1.1.5
+psycopg2-binary==2.9.1
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+scipy==1.5.4
+six==1.16.0
+soupsieve==2.2.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+zipp==3.5.0
